# Mock-API-Studio

./: .dockerignore  .gitignore  ANALYSIS_COMPLETE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURES_ADVANCED.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTERNATIONALIZATION.md  Mock-API-Studio.md  OPEN_SOURCE_READY.md  PHASES_11-14_COMPLETE.md  PHASES_6-10_PROGRESS.md  PHASE_18_SUMMARY.md  PHASE_19_SUMMARY.md  PHASE_20_SUMMARY.md  PHASE_21_IMPLEMENTATION.md  PHASE_22_IMPLEMENTATION.md  PHASE_23_IMPLEMENTATION.md  PHASE_24_IMPLEMENTATION.md  PRODUCTION_HARDENING_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_COMPLETE.md  README.md  README_OLD.md  README_UPDATED.md  SECURITY.md  docker-compose.yml  lint-staged.config.cjs  package-lock.json  package.json  playwright.config.ts
.cursor/: Dockerfile  environment.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  FAKER_USAGE.md  package-lock.json  package.json  tsconfig.json
cli/: EXAMPLES.md  LICENSE  PUBLISH.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
desktop/: .env.example  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CURSOR_AUTOMATION.md  DOCKER.md  GITHUB_ACTIONS_INTEGRATION.md  GRPC.md  MULTI_REGION.md  OPEN_SOURCE.md  PACT_BROKER.md  PUBLISHING.md
(+305 files in other folders)
