[package]
name = "mock-api-studio-desktop"
version = "1.0.0"
description = "Mock API Studio desktop shell"
edition = "2021"

[lib]
name = "mock_api_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
